SET( EXECUTABLE_OUTPUT_PATH ${PROJECT_SOURCE_DIR}/bin/7_process_contr)
ADD_EXECUTABLE(dameon dameon.c)
ADD_EXECUTABLE(execl execl.c)
ADD_EXECUTABLE(execle execle.c)
ADD_EXECUTABLE(execlp execlp.c)
ADD_EXECUTABLE(execve execve.c)
ADD_EXECUTABLE(exit exit.c)
ADD_EXECUTABLE(_exit _exit.c)
ADD_EXECUTABLE(exp1_7 exp1.c)
ADD_EXECUTABLE(exp2_7 exp2.c)
ADD_EXECUTABLE(fork fork.c)
ADD_EXECUTABLE(process process.c)
ADD_EXECUTABLE(syslog_dameon syslog_dameon.c)
ADD_EXECUTABLE(waitpid waitpid.c)

